src/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Faculty+Glyphic&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap');
@import 'highlight.js/styles/github.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #000000;
  --primary: 124, 58, 237;
  --secondary: 139, 92, 246;
  --inverted: 131, 197, 18;
  --shadow: 0 0 0 6px rgba(var(--primary), .25)
}

@media(prefers-color-scheme: dark) {
  :root {
    --background: #000000;
    --foreground: #ffffff;
    --primary: 124, 58, 237;
    --secondary: 139, 92, 246;
    --inverted: 131, 197, 18;
    --shadow: 0 0 0 6px rgba(var(--primary), .5)
  }
}

html.dark {
  --background: #000000;
  --foreground: #ffffff;
  --primary: 124, 58, 237;
  --secondary: 139, 92, 246;
  --inverted: 131, 197, 18;
  --shadow: 0 0 0 6px rgba(var(--primary), .5)
}

html.light {
  --background: #ffffff;
  --foreground: #000000;
  --primary: 124, 58, 237;
  --secondary: 139, 92, 246;
  --inverted: 131, 197, 18;
  --shadow: 0 0 0 6px rgba(var(--primary), .25)
}

*::selection {
  background: rgba(var(--primary));
  color: white;
}

body {
  color: var(--foreground);
  background: var(--background);
  word-break: break-word;
}

a,
button,
input {
  outline: none !important;
}

input[type="range"] {
  cursor: pointer;
  -webkit-appearance: none;
  appearance: none;
  outline: none;
}

input[type="range"]::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  height: 15px;
  width: 15px;
  background-color: rgb(var(--primary));
  border-radius: 50%;
  border: none;
  filter: drop-shadow(0 0 1px rgba(0, 0, 0, .33));
  transition: .1s ease-in-out;
}

input[type="range"]::-moz-range-thumb {
  height: 15px;
  width: 15px;
  background-color: rgb(var(--primary));
  border-radius: 50%;
  border: none;
  filter: drop-shadow(0 0 1px rgba(0, 0, 0, .33));
  transition: .1s ease-in-out;
}

input[type="range"]::-webkit-slider-thumb:hover {
  box-shadow: var(--shadow)
}

input[type="range"]:active::-webkit-slider-thumb {
  box-shadow: var(--shadow)
}

input[type="range"]::-moz-range-thumb:hover {
  box-shadow: var(--shadow)
}

input[type="range"]:active::-moz-range-thumb {
  box-shadow: var(--shadow)
}

input[type="search"]::-webkit-search-decoration,
input[type="search"]::-webkit-search-cancel-button,
input[type="search"]::-webkit-search-results-button,
input[type="search"]::-webkit-search-results-decoration {
  -webkit-appearance: none !important;
  display: none !important;
}

@keyframes requesting-animation {

  0%,
  100% {
    background-position: 0% 50%;
  }

  50% {
    background-position: 100% 50%;
  }
}

.animate-gradient {
  background-size: 400%;
  -webkit-animation: requesting-animation 2s ease infinite;
  -moz-animation: requesting-animation 2s ease infinite;
  animation: requesting-animation 2s ease infinite;
}

@keyframes click-animation {
  0% {
    left: 275%;
  }

  100% {
    left: 0;
  }
}

.animate-click {
  -webkit-animation: click-animation 1.666s ease-in-out infinite;
  -moz-animation: click-animation 1.666s ease-in-out infinite;
  animation: click-animation 1.666s ease-in-out infinite;
}

@keyframes dots {
  50% {
    opacity: 0;
    transform: scale(0.7) translateY(10px);
  }
}

.animated-dots {
  width: 6px;
  height: 6px;
  margin: 0 2px;
  background-color: rgb(var(--primary));
  border-radius: 50%;
  display: inline-block;
  animation: dots;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  animation-timing-function: ease-in-out;
}

.animated-dots:nth-child(2) {
  animation-delay: .4s;
}

.animated-dots:nth-child(3) {
  animation-delay: .8s;
}

@property --deg {
  syntax: '<angle>';
  inherits: true;
  initial-value: 0deg;
}

@keyframes animate-gradient-border {
  to {
    --deg: 360deg;
  }
}

.animated-gradient-border {
  z-index: 0;
  position: relative;
}

.animated-gradient-border::before,
.animated-gradient-border::after {
  content: '';
  z-index: -1;
  position: absolute;
  inset: 0;
  background: conic-gradient(from var(--deg) at center, rgb(var(--inverted)), rgb(var(--primary)), rgb(var(--primary)), rgb(var(--inverted)));
  border-radius: inherit;
  animation: animate-gradient-border 3s linear infinite;
}

.animated-gradient-border::after {
  z-index: -2;
  filter: blur(16px);
}

